--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,6 @@ input[type="search"] {
 }
 
 /* NAV */
-
 .nav {
   background: linear-gradient(to right, #ffffff, #cde4ff);
   padding: 1rem;
@@ -58,8 +57,6 @@ input[type="search"] {
   transition: all 0.3s ease-in-out;
 }
 
-
-
 .nav .inner-content {
   display: flex;
   align-items: center;
@@ -71,21 +68,15 @@ input[type="search"] {
 }
 
 /* LOGO */
-.logo {
+.logo span a {
  
   font-family: 'Rajdhani', sans-serif;
   text-transform: uppercase;
   color: red;
-  font-weight: bold;
-  font-size: 2.5rem; /* Tamanho aumentado para a logo */
-  display: flex;
-  align-items: center;
-  margin-left: 3.5rem;
 }
 
 .logo span {
-  color: var(--corpreta);
-  margin-left: 0.3rem;
+  color:var(--segundopreto);
   font-weight: bold;
   font-size: 1.5rem; /* Destaque maior */
   letter-spacing: 1.2px;
@@ -93,8 +84,8 @@ input[type="search"] {
 }
 
 
-.logo:hover {
-  color: #4a90e2; /* Mudança de cor ao passar o mouse */
+.logo span:hover {
+  color: #0062ff;
   transform: scale(1.05); /* Leve aumento para destacar */
 }
 
